se actualizaron nuevas funciones

--- a/CSCache.csproj
+++ b/CSCache.csproj
@@ -229,8 +229,13 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Model\AppEnumerations.cs" />
+    <Compile Include="Model\Cache_Lenguajes.cs" />
     <Compile Include="Model\Cache_Salas.cs" />
     <Compile Include="Model\Cache_Peliculas.cs" />
+    <Compile Include="Model\Cache_CopiasPelicula.cs" />
+    <Compile Include="Model\Cache_ComplejosGeo.cs" />
+    <Compile Include="Model\Cache_Clasificaciones.cs" />
+    <Compile Include="Model\Cache_Generos.cs" />
     <Compile Include="Model\Complex_Options.cs" />
     <Compile Include="Model\Feature.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
