--- a/CSCache.csproj
+++ b/CSCache.csproj
@@ -233,10 +233,12 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Model\AppEnumerations.cs" />
+    <Compile Include="Model\Caches.cs" />
     <Compile Include="Model\Cache_Cinesemanas.cs" />
     <Compile Include="Model\Cache_Funciones.cs" />
     <Compile Include="Model\Cache_GruposSemana.cs" />
     <Compile Include="Model\Cache_Lenguajes.cs" />
+    <Compile Include="Model\Cache_Productos.cs" />
     <Compile Include="Model\Cache_Salas.cs" />
     <Compile Include="Model\Cache_Peliculas.cs" />
     <Compile Include="Model\Cache_CopiasPelicula.cs" />
@@ -244,7 +246,9 @@
     <Compile Include="Model\Cache_Clasificaciones.cs" />
     <Compile Include="Model\Cache_Generos.cs" />
     <Compile Include="Model\Cache_Tecnologias.cs" />
+    <Compile Include="Model\Complejos.cs" />
     <Compile Include="Model\Complex_Options.cs" />
+    <Compile Include="Model\DeviceImageSettings.cs" />
     <Compile Include="Model\Feature.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
