Rename cs connection key variable

--- a/Web.config
+++ b/Web.config
@@ -61,7 +61,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="CMS_AtlasConnection" 
+    <add name="CsBaseConnection" 
          connectionString="Server=192.168.0.230,1453;Database=CMS_Atlas;persist security info=True;User Id=ext_free;Password=D3v_Fr33_SQL14#;encrypt=False;trustservercertificate=True;MultipleActiveResultSets=True;" 
          providerName="System.Data.SqlClient" />
   </connectionStrings>
